--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
-/node_modules
-/atividade
+node_modules
+atividade
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
